# Capstone-Main

./: !startlocalhost.txt  .gitignore  .gitmodules  AGENTS.md  API_AUDIT_REPORT.md  AUDIT_AUTHENTICATION_SYSTEM.md  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_SUMMARY_AND_GEMINI_DOCS.md  Academic_Citations_Guide.md  AcceptableUsePolicy.md  CHANGELOG.md  CHATGPT_SYSTEM_GUIDE.md  CHECK_IN_OUT_FLOW_TEST.md  CLEANUP_INSTRUCTIONS.md  CLEANUP_VERIFICATION_REPORT.md  COPILOT.md  Capstone Main.code-workspace  Capstone_Option_1_Guard_Management.md  Capstone_Option_2_Equipment_Management.md  Capstone_Option_3_Authentication_AccessControl.md  Capstone_Option_4_Integrated_Security_Operations.md  Capstone_Option_5_DASIA_Implemented_System.md  Capstone_Option_5_DASIA_Implemented_System_INTRO_FINAL.md  DEEP_CLEANUP_AUDIT.md  ERGONOMIC_REFACTOR_SUMMARY.md  GEMINI_PROMPT_TEMPLATE.md  GEMINI_QUICK_REFERENCE.md  GEMINI_SYSTEM_CONTEXT_PROMPT.md  GEMINI_SYSTEM_REFERENCE_THEME_SYSTEM.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LICENSE  Main Capstone Title 1.docx  PARAMETER_CONTRACTS.md  PHASE1_IMPLEMENTATION_REPORT.md  PHASE3_ENTERPRISE_HARDENING_REPORT.md  PRODUCTION_ROLLOUT.md  PROJECT_MEMORY.md  PrivacyPolicy.md  QUICK_FIX_GUIDE.md  (+40 more)
.codex/: config.toml  gsd-file-manifest.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
apps/: README.md
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/icons/: icon.icns
apps/desktop-tauri/src-tauri/src/: main.rs
archive/: README.md
docs/: CODEX_SYSTEM_MAP.md  CODEX_WORKFLOW.md  PRD.yaml  (+10 more)
(+327 files in other folders)
