[package]
name = "sentinel-desktop"
version = "1.0.0"
description = "SENTINEL desktop shell"
authors = ["SENTINEL Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
